--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
-* Last name:
-* First name:
-* Github username:
+* Last name: Hawkins
+* First name: Ed
+* Github username: ehawkins18
 
 * Instructions:
 
